<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gym_bag">GYM BAG</string>
    <string name="the_shop">THE SHOP</string>
    <string name="statistics">STATISTICS</string>
    <string name="setting_text">SETTING</string>
    <string name="username">USERNAME</string>
    <string name="timer_setting">TIMER SETTING</string>
    <string name="default_number_of_sets">Default Number of Sets</string>
    <string name="default_time_for_sets">Default Time For Sets</string>
    <string name="default_exercise_goals">Default Exercise Goals</string>
    <string name="gymquest_theme">GymQuest Theme</string>
    <string name="custom_encounter_builder">CUSTOM ENCOUNTER BUILDER</string>
    <string name="purchase_chests">PURCHASE CHESTS</string>
    <string name="item_description">ITEM DESCRIPTION</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="legendary">LEGENDARY</string>
    <string name="journey_difficulty">JOURNEY DIFFICULTY:</string>
    <string name="quest_intensity">QUEST INTENSITY:</string>
    <string name="time_between_sets">Time between sets</string>
    <string name="workout_timer_length">Workout timer length</string>
    <string name="enable_timer_between_sets">Enable timer  between sets?</string>
    <string name="enable_overall_workout_timer">Enable overall  workout timer?</string>
    <string name="user_input">USER INPUT</string>
    <string name="all_time_records">ALL TIME RECORDS</string>
    <string name="complete">COMPLETE!</string>
    <string name="summary">SUMMARY</string>
    <string name="ancient_ruins">ANCIENT RUINS</string>
    <string name="strength">STRENGTH</string>
    <string name="agility">AGILITY</string>
    <string name="speed">SPEED</string>
    <string name="endurance">ENDURANCE</string>
</resources>
