<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lifehackinnovations.gymquest.myapplication.Fragments.`19TimerSettingFragment`">

    <data>

        <variable
            name="buttonText"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        tools:background="@color/appBackgroundColor">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/gym_quest_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/garamond_bold"
                android:text="@string/timer_setting"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settingUsernameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/garamond_bold"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:fontFamily="@font/lettergothicstd"
                    android:text="@string/default_time_for_sets"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:fontFamily="@font/lettergothicstd"
                    android:text="@string/enable_timer_between_sets"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:fontFamily="@font/lettergothicstd"
                    android:text="@string/time_between_sets"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:fontFamily="@font/lettergothicstd"
                    android:text="@string/enable_overall_workout_timer"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:fontFamily="@font/lettergothicstd"
                    android:text="@string/workout_timer_length"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/timerSettingBackId"
            layout="@layout/option_button_style"
            bind:buttonText="@{`BACK`}" />


    </LinearLayout>

</layout>